--- a/src/src/front-end/src/app/home/home.component.html
+++ b/src/src/front-end/src/app/home/home.component.html
@@ -16,6 +16,7 @@
     </div>
 </nav>
 <div class="container text-center mt-5">
-    <h1>Bem-vindo à Home</h1>
-    <p>Esta é uma página inicial simples com uma navbar responsiva.</p>
+   <!--  <h1>Bem-vindo à Home</h1>
+    <p>Esta é uma página inicial simples com uma navbar responsiva.</p> -->
+    <img src="assets/img/ambev.jpg" alt="Ambev" class="img-fluid">    
 </div>
