Criação de produto

--- a/src/src/front-end/src/app/home/home.component.html
+++ b/src/src/front-end/src/app/home/home.component.html
@@ -15,8 +15,6 @@
         </div>
     </div>
 </nav>
-<div class="container text-center mt-5">
-   <!--  <h1>Bem-vindo à Home</h1>
-    <p>Esta é uma página inicial simples com uma navbar responsiva.</p> -->
+<div class="container text-center">
     <img src="assets/img/ambev.jpg" alt="Ambev" class="img-fluid">    
 </div>
