ajustando configuration e docker file

--- a/src/src/front-end/src/app/nav-bar/nav-bar.component.html
+++ b/src/src/front-end/src/app/nav-bar/nav-bar.component.html
@@ -1,16 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand" >DeveloperEvaluation</a>
+        <a [routerLink]="['/home']" routerLinkActive="router-link-active"  class="navbar-brand">DeveloperEvaluation</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Produtos</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Carrinho</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Usuarios</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Sair</a></li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/produto']" routerLinkActive="router-link-active">Produtos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/home']">Carrinho</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/home']">Usuarios</a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" [routerLink]="['/login']">
+                        Sair</a>
+                </li>
             </ul>
         </div>
     </div>
