--- a/src/src/front-end/src/app/products/list/list.component.html
+++ b/src/src/front-end/src/app/products/list/list.component.html
@@ -12,7 +12,7 @@
               </tr>
             </thead>
             <tbody>
-                @if(paginatedResponse.data.length == 0) {
+                @if(paginatedResponse.data.data.length == 0) {  
                     <tr>
                         <td colspan="5">
                             <div class="alert alert-warning" role="alert">
@@ -21,7 +21,7 @@
                         </td>
                     </tr>
                 }   
-                @for (item of paginatedResponse.data; track $index) {
+                @for (item of paginatedResponse.data.data; track $index) {
                     <tr>
                         <td>{{item.title}}</td>
                         <td>{{item.description}}</td>
