--- a/src/src/front-end/src/app/products/new/new.component.html
+++ b/src/src/front-end/src/app/products/new/new.component.html
@@ -1,1 +1,34 @@
-<p>new works!</p>
+
+<div class="container mt-3">
+<form [formGroup]="productForm" (ngSubmit)="submitForm()" class="container mt-4">
+    <div class="mb-3">
+      <label class="form-label">Título</label>
+      <input type="text" class="form-control" formControlName="title">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Preço</label>
+      <input type="number" class="form-control" formControlName="price">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Descrição</label>
+      <textarea class="form-control" formControlName="description"></textarea>
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Categoria</label>
+      <input type="text" class="form-control" formControlName="category">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Imagem (URL)</label>
+      <input type="text" class="form-control" formControlName="image">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Avaliação</label>
+      <input type="number" class="form-control" formControlName="rate" min="0" max="5" step="0.1">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Quantidade</label>
+      <input type="number" class="form-control" formControlName="count" min="0">
+    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="productForm.invalid">Cadastrar Produto</button>
+  </form>
+</div>
