delete de produducts created

--- a/src/src/front-end/src/app/products/update/update.component.html
+++ b/src/src/front-end/src/app/products/update/update.component.html
@@ -29,6 +29,6 @@
           <label class="form-label">Quantidade</label>
           <input type="number" class="form-control" formControlName="count" min="0">
         </div>
-        <button type="submit" class="btn btn-primary" [disabled]="productForm.invalid">Cadastrar Produto</button>
+        <button type="submit" class="btn btn-primary" [disabled]="productForm.invalid">Atualizar Produto</button>
       </form>
     </div>
